--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang = "en">
+<meta charset = "utf-8">
 <head>
-    <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width-device-width">
-    <meta http-equiv = "X-UA-Compatible" content = "ie-edge">
-    <title>Jace Randolph</title>
+    <link rel = "stylesheet" href = "styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Professional Profile</title>
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>
-        Hi, my name is Jace Randolph
-    </p>
+    <div class = "headerImg">
+        <div class = "navBar">
+            <a href = "#aboutMe">About Me</a>
+            <a href = "#projects">Projects</a>
+            <a href = "#contact">Contact</a>
+        </div>
+        <header><h1 id = "headerText">Jace Randolph</h1></header>
+    </div>
+    <div class = "about">
+        <h1 id = "aboutMe">About Me</h1>
+        <img src = "jace.jpg" alt = "Jace" class = "aboutImg">
+        <p>My name is Jace I like to hike, golf, snowboard, and hangout with my friends.</p>
+    </div>
+    <div class = "projects">
+        <h1 id = "projectHead">Projects</h1>
+        <a class = "project1" href = "https://loving-kare-ebf4ff.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
+        <a class = "project2" href = "https://vermillion-scone-583db8.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
+        <a class = "project3" href = "https://charming-malasada-361958.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
+        <a class = "project4" href = "https://deft-banoffee-63e923.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
+    </div>
+    <footer>
+        <a class = "insta-icon" href = "https://www.instagram.com/jace.randolph/" target = "_blank">
+            <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a class = "face-icon" href = "https://www.facebook.com/jace.randolph.31" target = "_blank">
+            <ion-icon name="logo-facebook"></ion-icon>
+        </a>
+        <a class = "git-icon" href = "https://github.com/jrand1234" target = "_blank">
+            <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a class = "mail-icon" href = "mailto:randolph.jace@gmail.com" target = "_blank">
+            <ion-icon name="mail-outline"></ion-icon>
+        </a>
+        &copy; Jace Randolph 2022
+    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </body>
 </html>
