Project setup and intial commit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <meta charset = "utf-8">
 <head>
-    <link rel = "stylesheet" href = "styles.css">
+    <link rel = "stylesheet" href = "/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Professional Profile</title>
 </head>
@@ -17,17 +17,17 @@
     </div>
     <div class = "about">
         <h1 id = "aboutMe">About Me</h1>
-        <img src = "jace.jpg" alt = "Jace" class = "aboutImg">
+        <img src = "/images/jace.jpg" alt = "Jace" class = "aboutImg">
         <p>My name is Jace I like to hike, golf, snowboard, and hangout with my friends.</p>
     </div>
-    <div class = "projects">
+    <div id = "projects">
         <h1 id = "projectHead">Projects</h1>
-        <a class = "project1" href = "https://loving-kare-ebf4ff.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
-        <a class = "project2" href = "https://vermillion-scone-583db8.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
-        <a class = "project3" href = "https://charming-malasada-361958.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
-        <a class = "project4" href = "https://deft-banoffee-63e923.netlify.app" target = "_blank"><img src = "project_img.jpeg" alt = "project"></a>
+        <a class = "project1" href = "https://loving-kare-ebf4ff.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
+        <a class = "project2" href = "https://vermillion-scone-583db8.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
+        <a class = "project3" href = "https://charming-malasada-361958.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
+        <a class = "project4" href = "https://deft-banoffee-63e923.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
     </div>
-    <footer>
+    <footer id = "contact">
         <a class = "insta-icon" href = "https://www.instagram.com/jace.randolph/" target = "_blank">
             <ion-icon name="logo-instagram"></ion-icon>
         </a>
