Project setup and initial commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class = "headerImg">
         <div class = "navBar">
             <a href = "#aboutMe">About Me</a>
-            <a href = "#projects">Projects</a>
+            <a href = "#projectHead">Projects</a>
             <a href = "#contact">Contact</a>
         </div>
         <header><h1 id = "headerText">Jace Randolph</h1></header>
@@ -18,14 +18,24 @@
     <div class = "about">
         <h1 id = "aboutMe">About Me</h1>
         <img src = "/images/jace.jpg" alt = "Jace" class = "aboutImg">
-        <p>My name is Jace I like to hike, golf, snowboard, and hangout with my friends.</p>
+        <p>My name is Jace Randolph, I am 21 years old. I am from Spanish Fork, Utah. I go to Utah Valley University
+            and my major is Computer Science with an emphasis in full stack web development. </p>
     </div>
-    <div id = "projects">
+    <div class = "hobbies">
+        <div class = "hobby-images">
+            <div class = "column"><img src = "/images/mount_timp.jpeg" alt = "mountain" class = "mountTimp"></div>
+            <div class = "column"><img src = "/images/golf.jpeg" alt = "golf" class = "golfImg"></div>
+        </div>
+        <p>Some of my hobbies include hiking, golfing, snowboarding, and working out. I mainly love being outdoors and 
+            seeing new places.
+        </p>
+    </div>
+    <div class = "projects">
         <h1 id = "projectHead">Projects</h1>
         <a class = "project1" href = "https://loving-kare-ebf4ff.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
-        <a class = "project2" href = "https://vermillion-scone-583db8.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
-        <a class = "project3" href = "https://charming-malasada-361958.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
-        <a class = "project4" href = "https://deft-banoffee-63e923.netlify.app" target = "_blank"><img src = "/images/project_img.jpeg" alt = "project"></a>
+        <a class = "project2" href = "https://vermillion-scone-583db8.netlify.app" target = "_blank"><img src = "/images/project_img2.jpeg" alt = "project"></a>
+        <a class = "project3" href = "https://charming-malasada-361958.netlify.app" target = "_blank"><img src = "/images/project_img3.jpeg" alt = "project"></a>
+        <a class = "project4" href = "https://deft-banoffee-63e923.netlify.app" target = "_blank"><img src = "/images/project_img4.jpeg" alt = "project"></a>
     </div>
     <footer id = "contact">
         <a class = "insta-icon" href = "https://www.instagram.com/jace.randolph/" target = "_blank">
