Project setup and inital commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class = "headerImg">
         <div class = "navBar">
             <a href = "#aboutMe">About Me</a>
+            <a href = "#hob">Hobbies</a>
             <a href = "#projectHead">Projects</a>
             <a href = "#contact">Contact</a>
         </div>
@@ -18,17 +19,22 @@
     <div class = "about">
         <h1 id = "aboutMe">About Me</h1>
         <img src = "/images/jace.jpg" alt = "Jace" class = "aboutImg">
-        <p>My name is Jace Randolph, I am 21 years old. I am from Spanish Fork, Utah. I go to Utah Valley University
-            and my major is Computer Science with an emphasis in full stack web development. </p>
+        <div id = "aboutMeDiv">
+            <p>My name is Jace Randolph, and I am 21 years old. I am from Spanish Fork, Utah. I go to Utah Valley University
+                and my major is Computer Science with an emphasis in full stack web development. </p>
+        </div>
     </div>
     <div class = "hobbies">
+        <h1 id = "hob">Hobbies</h1>
         <div class = "hobby-images">
             <div class = "column"><img src = "/images/mount_timp.jpeg" alt = "mountain" class = "mountTimp"></div>
             <div class = "column"><img src = "/images/golf.jpeg" alt = "golf" class = "golfImg"></div>
         </div>
-        <p>Some of my hobbies include hiking, golfing, snowboarding, and working out. I mainly love being outdoors and 
-            seeing new places.
-        </p>
+        <div id = "hobbiesDiv">
+            <p>Some of my hobbies include hiking, golfing, snowboarding, and working out. I mainly love being outdoors and 
+                seeing new places. If I am not outdoors I am either trying to improve my coding skills or spending time with my friends and family.
+            </p>
+        </div>
     </div>
     <div class = "projects">
         <h1 id = "projectHead">Projects</h1>
@@ -36,6 +42,13 @@
         <a class = "project2" href = "https://vermillion-scone-583db8.netlify.app" target = "_blank"><img src = "/images/project_img2.jpeg" alt = "project"></a>
         <a class = "project3" href = "https://charming-malasada-361958.netlify.app" target = "_blank"><img src = "/images/project_img3.jpeg" alt = "project"></a>
         <a class = "project4" href = "https://deft-banoffee-63e923.netlify.app" target = "_blank"><img src = "/images/project_img4.jpeg" alt = "project"></a>
+    </div>
+    <div class = "addCred">
+        <h1>Additional Credit</h1>
+        <ul>
+            <li>Smooth scrolling</li>
+            <li>Highlighted Menu</li>
+        </ul>
     </div>
     <footer id = "contact">
         <a class = "insta-icon" href = "https://www.instagram.com/jace.randolph/" target = "_blank">
